--- a/index.html
+++ b/index.html
@@ -441,9 +441,8 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col mr-2">
-                                    <div class="text-md-left font-weight-bold mb-2 text-primary">Free public Rest APIs by Rey</div>
-                                    <div class="text-sm-left mb-0 font-weight-bold">Hello, everyone. Glad to hear you wanted to use my Rest API. Please use this website wisely. This website can be accessed for free, but if you want to donate to me, I will gladly accept :) If you find some bugs, please
-                                        report them via
+                                    <div class="text-md-left font-weight-bold mb-2 text-primary">Gratis Api berbagai macam</div>
+                                    <div class="text-sm-left mb-0 font-weight-bold">Hello, kabeh. Bungah krungu sampeyan pengin nggunakake Rest API sandi. Mangga gunakake situs web iki kanthi wicaksana. Situs web iki bisa diakses kanthi gratis, nanging yen sampeyan pengin nyumbang kanggo aku, aku bakal nampa kanthi seneng :) Yen sampeyan nemokake
                                         <a href="https://t.me/anjay" target="_blank" style="color: #d3d5f3; text-decoration: none;">telegram.</a>
                                     </div>
                                 </div>
@@ -478,7 +477,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-uppercase mb-1">Visitor (Unique)</div>
-                                            <div class="h5 mb-0 font-weight-bold">8372</div>
+                                            <div class="h5 mb-0 font-weight-bold">0</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fa fa-user faa-ring animated fa-2x text-primary"></i>
@@ -494,7 +493,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-uppercase mb-1">Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold">8372</div>
+                                            <div class="h5 mb-0 font-weight-bold">0</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar faa-wrench animated fa-2x text-primary"></i>
@@ -507,10 +506,10 @@
                     <!--Row-->
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            Someone want to donate me?
+                            apa sampeyan pengin nyumbang?
                             <p>
-                                <a href="https://trakteer.id/erzabot" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Trakteer</a>
-                                <a href="https://paypal.me/anjay" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-paypal"></i>&nbsp;Paypal</a>
+                                <a href="https://trakteer.id/ZoXs" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Trakteer</a>
+                                <a href="https://trakteer.id/ZoXs/tip" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-paypal"></i>&nbsp;Paypal</a>
                             </p>
                         </div>
                     </div>
