--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Erza</title>
+    <title>Gratis Api</title>
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/default.css" rel="stylesheet">
@@ -22,7 +22,7 @@
         <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <i class="fa fa-smile-beam fa-2x"></i>
-                <div class="sidebar-brand-text mx-3">Erza APIs</div>
+                <div class="sidebar-brand-text mx-3">Thon APIs</div>
             </a>
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
@@ -443,7 +443,7 @@
                                 <div class="col mr-2">
                                     <div class="text-md-left font-weight-bold mb-2 text-primary">Gratis Api berbagai macam</div>
                                     <div class="text-sm-left mb-0 font-weight-bold">Hello, kabeh. Bungah krungu sampeyan pengin nggunakake Rest API sandi. Mangga gunakake situs web iki kanthi wicaksana. Situs web iki bisa diakses kanthi gratis, nanging yen sampeyan pengin nyumbang kanggo aku, aku bakal nampa kanthi seneng :) Yen sampeyan nemokake
-                                        <a href="https://t.me/anjay" target="_blank" style="color: #d3d5f3; text-decoration: none;">telegram.</a>
+                                        <a href="https://t.me/Lefthon" target="_blank" style="color: #d3d5f3; text-decoration: none;">telegram.</a>
                                     </div>
                                 </div>
                                 <div class="col-auto">
